--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 .search-container {
     text-align: left;
     margin-top: 20px;
-    margin-left: 40%;
+    margin-left: 20px;
     width: 100%;
 }
 
