--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,20 @@ body {
     width: 100%
 }
 
+@media (max-width: 800px) { 
+    .search-container {    
+        display: flex;
+        flex-wrap: nowrap;
+    }
+}
+
 .search-container {
     text-align: left;
     margin-top: 20px;
     margin-left: 20px;
     width: 40%;
 }
+
 
 input[type="text"] {
     padding: 10px;
@@ -25,6 +33,7 @@ button {
     color: #fff;
     border: none;
     cursor: pointer;
+    margin-left: 15px;
 }
 
 #result {
